1.更新配置与博文

--- a/source/_posts/2016-02-14-welcome.md
+++ b/source/_posts/2016-02-14-welcome.md
@@ -1,7 +1,19 @@
----
+﻿---
 title: Welcome
 date: 2016-02-14 18:00:00
 updated: 2016-02-14 18:00:00
 tags:
 categories:
 ---
+我的博客终于搭建完成了，首先当然是个大大的Welcome，欢迎感兴趣的、志同道合的人常来逛逛、喷喷。
+
+其实在很久很久以前，我就一直想着自己要表达些什么，分享些什么，可是一直想了很久很久也没付诸于实践，也许这就是严重的拖延症吧。我的Github Pages注册后就一直放在那都快发霉了，终于通过这几日的一番装修折腾，正式顺利上线了。
+
+折腾的过程中发现Hexo真是个好东西，原先大半年一直三天捕鱼两天晒网的研究Jeklly、Octopress 2.0和Octopress 3.0博客的建设，特别是Octopress 3.0正式发布后，发现Octopress 2.0的主题居然无法兼容使用，整个做成了基于Jeklly的插件了，现在回头想想感觉真浪费了不少时光啊！好在发现了Hexo，一天时间就上手了，其Node.js的亲和力也好，使用简单方便，主题也很漂亮，定制性也很强，真心赞一个。
+
+从今往后我会把自己多年的技术经验与积累逐步梳理，并把一些自认为优秀的工具、框架、培训开源分享给大家，也希望大家多多关注我的Github与博客，给出宝贵的意见与建议。
+
+在这里还要特别感谢Zippera's Blog的相关博客建设教程，从博主开源的Lightum主题中也得到了不少收获。
+
+在这也推荐给在路上的童鞋：
+>http://zipperary.com/categories/hexo/
